fixed contribution select being too wide and covering the settings link

--- a/mod-picker/app/assets/stylesheets/general/header.scss
+++ b/mod-picker/app/assets/stylesheets/general/header.scss
@@ -103,6 +103,7 @@ header {
     height: 42px;
     font-size: 12px;
     cursor: pointer;
+    width: 110px;
   }
 }
 
